@@ -1,5 +1,5 @@
 /*
- * SPDX-License-Identifier: LGPL-2.1-or-later
+ * SPDX-License-Identifier: Apache-2.0
  * Copyright Red Hat Inc. and Hibernate Authors
  */
 package org.hibernate.orm.test.query.order;
@@ -9,14 +9,17 @@ import jakarta.persistence.Id;
 import jakarta.persistence.metamodel.SingularAttribute;
 import org.hibernate.metamodel.model.domain.EntityDomainType;
 import org.hibernate.query.Order;
+import org.hibernate.query.specification.SelectionSpecification;
 import org.hibernate.testing.orm.junit.DomainModel;
+import org.hibernate.testing.orm.junit.NotImplementedYet;
 import org.hibernate.testing.orm.junit.SessionFactory;
 import org.hibernate.testing.orm.junit.SessionFactoryScope;
+import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
 import java.util.List;
 
-import static java.util.stream.Collectors.toList;
 import static org.hibernate.query.Order.asc;
 import static org.hibernate.query.Order.by;
 import static org.hibernate.query.Order.desc;
@@ -24,440 +27,428 @@ import static org.hibernate.query.SortDirection.ASCENDING;
 import static org.hibernate.query.SortDirection.DESCENDING;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
+@SuppressWarnings("JUnitMalformedDeclaration")
 @SessionFactory
 @DomainModel(annotatedClasses = OrderTest.Book.class)
 public class OrderTest {
 
-	@Test void testAscendingDescending(SessionFactoryScope scope) {
-		scope.inTransaction( session -> session.createMutationQuery("delete Book").executeUpdate() );
+	@BeforeEach
+	void createTestData(SessionFactoryScope scope) {
 		scope.inTransaction( session -> {
 			session.persist(new Book("9781932394153", "Hibernate in Action"));
 			session.persist(new Book("9781617290459", "Java Persistence with Hibernate"));
 		});
+	}
+
+	@AfterEach
+	void tearDown(SessionFactoryScope scope) {
+		scope.dropData();
+	}
+
+	@Test void testAscendingDescending(SessionFactoryScope scope) {
 		EntityDomainType<Book> bookType = scope.getSessionFactory().getJpaMetamodel().findEntityType(Book.class);
 		SingularAttribute<? super Book, ?> title = bookType.findSingularAttribute("title");
 		SingularAttribute<? super Book, ?> isbn = bookType.findSingularAttribute("isbn");
 		scope.inSession(session -> {
-			List<String> titlesAsc = session.createSelectionQuery("from Book", Book.class)
-					.setOrder(asc(title))
+			List<String> titlesAsc = SelectionSpecification.create( Book.class, "from Book" )
+					.sort(asc(title))
+					.createQuery( session )
 					.getResultList()
 					.stream().map(book -> book.title)
-					.collect(toList());
+					.toList();
 			assertEquals("Hibernate in Action", titlesAsc.get(0));
 			assertEquals("Java Persistence with Hibernate", titlesAsc.get(1));
 
-			List<String> titlesDesc = session.createSelectionQuery("from Book", Book.class)
-					.setOrder(desc(title))
+			List<String> titlesDesc = SelectionSpecification.create( Book.class, "from Book" )
+					.sort(desc(title))
+					.createQuery( session )
 					.getResultList()
 					.stream().map(book -> book.title)
-					.collect(toList());
+					.toList();
 			assertEquals("Hibernate in Action", titlesDesc.get(1));
 			assertEquals("Java Persistence with Hibernate", titlesDesc.get(0));
 
-			List<String> isbnAsc = session.createSelectionQuery("from Book", Book.class)
-					.setOrder(List.of(asc(isbn), desc(title)))
+			List<String> isbnAsc = SelectionSpecification.create( Book.class, "from Book" )
+					.sort(asc(isbn))
+					.sort(desc(title))
+					.createQuery( session )
 					.getResultList()
 					.stream().map(book -> book.title)
-					.collect(toList());
+					.toList();
 			assertEquals("Hibernate in Action", isbnAsc.get(1));
 			assertEquals("Java Persistence with Hibernate", isbnAsc.get(0));
 
-			List<String> isbnDesc = session.createSelectionQuery("from Book", Book.class)
-					.setOrder(List.of(desc(isbn), desc(title)))
+			List<String> isbnDesc = SelectionSpecification.create( Book.class, "from Book" )
+					.sort(desc(isbn))
+					.sort(desc(title))
+					.createQuery( session )
 					.getResultList()
 					.stream().map(book -> book.title)
-					.collect(toList());
+					.toList();
 			assertEquals("Hibernate in Action", isbnDesc.get(0));
 			assertEquals("Java Persistence with Hibernate", isbnDesc.get(1));
 
-//            titlesAsc = session.createSelectionQuery("from Book order by isbn asc", Book.class)
-//                    .setOrder(asc(title))
-//                    .getResultList()
-//                    .stream().map(book -> book.title)
-//                    .collect(toList());
-//            assertEquals("Hibernate in Action", titlesAsc.get(1));
-//            assertEquals("Java Persistence with Hibernate", titlesAsc.get(0));
-			titlesAsc = session.createSelectionQuery("from Book order by isbn asc", Book.class)
-//                    .setOrder(emptyList())
-					.setOrder(asc(title))
+			titlesAsc = SelectionSpecification.create( Book.class, "from Book order by isbn asc" )
+					.resort(asc(title))
+					.createQuery( session )
 					.getResultList()
 					.stream().map(book -> book.title)
-					.collect(toList());
+					.toList();
 			assertEquals("Hibernate in Action", titlesAsc.get(0));
 			assertEquals("Java Persistence with Hibernate", titlesAsc.get(1));
 		});
 	}
 
 	@Test void testAscendingDescendingWithPositionalParam(SessionFactoryScope scope) {
-		scope.inTransaction( session -> session.createMutationQuery("delete Book").executeUpdate() );
-		scope.inTransaction( session -> {
-			session.persist(new Book("9781932394153", "Hibernate in Action"));
-			session.persist(new Book("9781617290459", "Java Persistence with Hibernate"));
-		});
 		EntityDomainType<Book> bookType = scope.getSessionFactory().getJpaMetamodel().findEntityType(Book.class);
 		SingularAttribute<? super Book, ?> title = bookType.findSingularAttribute("title");
 		SingularAttribute<? super Book, ?> isbn = bookType.findSingularAttribute("isbn");
 		scope.inSession(session -> {
-			List<String> titlesAsc = session.createSelectionQuery("from Book where title like ?1", Book.class)
+			List<String> titlesAsc = SelectionSpecification.create( Book.class, "from Book where title like ?1" )
+					.sort(asc(title))
+					.createQuery( session )
 					.setParameter(1, "%Hibernate%")
-					.setOrder(asc(title))
 					.getResultList()
 					.stream().map(book -> book.title)
-					.collect(toList());
+					.toList();
 			assertEquals("Hibernate in Action", titlesAsc.get(0));
 			assertEquals("Java Persistence with Hibernate", titlesAsc.get(1));
 
-			List<String> titlesDesc = session.createSelectionQuery("from Book where title like ?1", Book.class)
+			List<String> titlesDesc = SelectionSpecification.create(Book.class, "from Book where title like ?1")
+					.sort(Order.desc(title))
+					.createQuery( session )
 					.setParameter(1, "%Hibernate%")
-					.setOrder(Order.desc(title))
 					.getResultList()
 					.stream().map(book -> book.title)
-					.collect(toList());
+					.toList();
 			assertEquals("Hibernate in Action", titlesDesc.get(1));
 			assertEquals("Java Persistence with Hibernate", titlesDesc.get(0));
 
-			List<String> isbnAsc = session.createSelectionQuery("from Book where title like ?1", Book.class)
+			List<String> isbnAsc = SelectionSpecification.create(Book.class, "from Book where title like ?1")
+					.sort(asc(isbn))
+					.sort(desc(title))
+					.createQuery( session )
 					.setParameter(1, "%Hibernate%")
-					.setOrder(List.of(asc(isbn), desc(title)))
 					.getResultList()
 					.stream().map(book -> book.title)
-					.collect(toList());
+					.toList();
 			assertEquals("Hibernate in Action", isbnAsc.get(1));
 			assertEquals("Java Persistence with Hibernate", isbnAsc.get(0));
 
-			List<String> isbnDesc = session.createSelectionQuery("from Book where title like ?1", Book.class)
+			List<String> isbnDesc = SelectionSpecification.create(Book.class, "from Book where title like ?1")
+					.sort(desc(isbn))
+					.sort(desc(title))
+					.createQuery( session )
 					.setParameter(1, "%Hibernate%")
-					.setOrder(List.of(desc(isbn), desc(title)))
 					.getResultList()
 					.stream().map(book -> book.title)
-					.collect(toList());
+					.toList();
 			assertEquals("Hibernate in Action", isbnDesc.get(0));
 			assertEquals("Java Persistence with Hibernate", isbnDesc.get(1));
 
-//            titlesAsc = session.createSelectionQuery("from Book where title like ?1 order by isbn asc", Book.class)
-//                    .setParameter(1, "%Hibernate%")
-//                    .setOrder(asc(title))
-//                    .getResultList()
-//                    .stream().map(book -> book.title)
-//                    .collect(toList());
-//            assertEquals("Hibernate in Action", titlesAsc.get(1));
-//            assertEquals("Java Persistence with Hibernate", titlesAsc.get(0));
-			titlesAsc = session.createSelectionQuery("from Book where title like ?1 order by isbn asc", Book.class)
+			titlesAsc = SelectionSpecification.create(Book.class, "from Book where title like ?1 order by isbn asc")
+					.resort(asc(title))
+					.createQuery( session )
 					.setParameter(1, "%Hibernate%")
-//                    .setOrder(emptyList())
-					.setOrder(asc(title))
 					.getResultList()
 					.stream().map(book -> book.title)
-					.collect(toList());
+					.toList();
 			assertEquals("Hibernate in Action", titlesAsc.get(0));
 			assertEquals("Java Persistence with Hibernate", titlesAsc.get(1));
 		});
 	}
 
 	@Test void testAscendingDescendingWithNamedParam(SessionFactoryScope scope) {
-		scope.inTransaction( session -> session.createMutationQuery("delete Book").executeUpdate() );
-		scope.inTransaction( session -> {
-			session.persist(new Book("9781932394153", "Hibernate in Action"));
-			session.persist(new Book("9781617290459", "Java Persistence with Hibernate"));
-		});
 		EntityDomainType<Book> bookType = scope.getSessionFactory().getJpaMetamodel().findEntityType(Book.class);
 		SingularAttribute<? super Book, ?> title = bookType.findSingularAttribute("title");
 		SingularAttribute<? super Book, ?> isbn = bookType.findSingularAttribute("isbn");
 		scope.inSession(session -> {
-			List<String> titlesAsc = session.createSelectionQuery("from Book where title like :title", Book.class)
+			List<String> titlesAsc = SelectionSpecification.create(Book.class, "from Book where title like :title")
+					.sort(asc(title))
+					.createQuery( session )
 					.setParameter("title", "%Hibernate%")
-					.setOrder(asc(title))
 					.getResultList()
 					.stream().map(book -> book.title)
-					.collect(toList());
+					.toList();
 			assertEquals("Hibernate in Action", titlesAsc.get(0));
 			assertEquals("Java Persistence with Hibernate", titlesAsc.get(1));
 
-			List<String> titlesDesc = session.createSelectionQuery("from Book where title like :title", Book.class)
+			List<String> titlesDesc = SelectionSpecification.create(Book.class,"from Book where title like :title")
+					.sort(desc(title))
+					.createQuery( session )
 					.setParameter("title", "%Hibernate%")
-					.setOrder(desc(title))
 					.getResultList()
 					.stream().map(book -> book.title)
-					.collect(toList());
+					.toList();
 			assertEquals("Hibernate in Action", titlesDesc.get(1));
 			assertEquals("Java Persistence with Hibernate", titlesDesc.get(0));
 
-			List<String> isbnAsc = session.createSelectionQuery("from Book where title like :title", Book.class)
+			List<String> isbnAsc = SelectionSpecification.create(Book.class, "from Book where title like :title")
+					.sort(asc(isbn))
+					.sort(desc(title))
+					.createQuery( session )
 					.setParameter("title", "%Hibernate%")
-					.setOrder(List.of(asc(isbn), desc(title)))
 					.getResultList()
 					.stream().map(book -> book.title)
-					.collect(toList());
+					.toList();
 			assertEquals("Hibernate in Action", isbnAsc.get(1));
 			assertEquals("Java Persistence with Hibernate", isbnAsc.get(0));
 
-			List<String> isbnDesc = session.createSelectionQuery("from Book where title like :title", Book.class)
+			List<String> isbnDesc = SelectionSpecification.create(Book.class, "from Book where title like :title")
+					.sort(desc(isbn))
+					.sort(desc(title))
+					.createQuery( session )
 					.setParameter("title", "%Hibernate%")
-					.setOrder(List.of(desc(isbn), desc(title)))
 					.getResultList()
 					.stream().map(book -> book.title)
-					.collect(toList());
+					.toList();
 			assertEquals("Hibernate in Action", isbnDesc.get(0));
 			assertEquals("Java Persistence with Hibernate", isbnDesc.get(1));
 
-//            titlesAsc = session.createSelectionQuery("from Book where title like :title order by isbn asc", Book.class)
-//                    .setParameter("title", "%Hibernate%")
-//                    .setOrder(asc(title))
-//                    .getResultList()
-//                    .stream().map(book -> book.title)
-//                    .collect(toList());
-//            assertEquals("Hibernate in Action", titlesAsc.get(1));
-//            assertEquals("Java Persistence with Hibernate", titlesAsc.get(0));
-			titlesAsc = session.createSelectionQuery("from Book where title like :title order by isbn asc", Book.class)
+			titlesAsc = SelectionSpecification.create(Book.class, "from Book where title like :title order by isbn asc")
+					.resort(asc(title))
+					.createQuery( session )
 					.setParameter("title", "%Hibernate%")
-//                    .setOrder(emptyList())
-					.setOrder(asc(title))
 					.getResultList()
 					.stream().map(book -> book.title)
-					.collect(toList());
+					.toList();
 			assertEquals("Hibernate in Action", titlesAsc.get(0));
 			assertEquals("Java Persistence with Hibernate", titlesAsc.get(1));
 		});
 	}
 
+	@NotImplementedYet(reason = "Support for explicit select lists not implemented yet for SelectionSpecification")
 	@Test void testAscendingDescendingBySelectElement(SessionFactoryScope scope) {
-		scope.inTransaction( session -> session.createMutationQuery("delete Book").executeUpdate() );
-		scope.inTransaction( session -> {
-			session.persist(new Book("9781932394153", "Hibernate in Action"));
-			session.persist(new Book("9781617290459", "Java Persistence with Hibernate"));
-		});
 		scope.inSession(session -> {
-			List<?> titlesAsc = session.createSelectionQuery("select isbn, title from Book", Object[].class)
-					.setOrder(asc(2))
+			List<?> titlesAsc = SelectionSpecification.create(Object[].class, "select isbn, title from Book")
+					.sort(asc(2))
+					.createQuery( session )
 					.getResultList()
 					.stream().map(book -> book[1])
-					.collect(toList());
+					.toList();
 			assertEquals("Hibernate in Action", titlesAsc.get(0));
 			assertEquals("Java Persistence with Hibernate", titlesAsc.get(1));
 
-			List<?> titlesDesc = session.createSelectionQuery("select isbn, title from Book", Object[].class)
-					.setOrder(desc(2))
+			List<?> titlesDesc = SelectionSpecification.create(Object[].class, "select isbn, title from Book")
+					.sort(desc(2))
+					.createQuery( session )
 					.getResultList()
 					.stream().map(book -> book[1])
-					.collect(toList());
+					.toList();
 			assertEquals("Hibernate in Action", titlesDesc.get(1));
 			assertEquals("Java Persistence with Hibernate", titlesDesc.get(0));
 
-			List<?> isbnAsc = session.createSelectionQuery("select isbn, title from Book", Object[].class)
-					.setOrder(List.of(asc(1), desc(2)))
+			List<?> isbnAsc = SelectionSpecification.create(Object[].class, "select isbn, title from Book")
+					.sort(asc(1))
+					.sort(desc(2))
+					.createQuery( session )
 					.getResultList()
 					.stream().map(book -> book[1])
-					.collect(toList());
+					.toList();
 			assertEquals("Hibernate in Action", isbnAsc.get(1));
 			assertEquals("Java Persistence with Hibernate", isbnAsc.get(0));
 
-			List<?> isbnDesc = session.createSelectionQuery("select isbn, title from Book", Object[].class)
-					.setOrder(List.of(desc(1), desc(2)))
+			List<?> isbnDesc = SelectionSpecification.create(Object[].class, "select isbn, title from Book")
+					.sort(desc(1))
+					.sort(desc(2))
+					.createQuery( session )
 					.getResultList()
 					.stream().map(book -> book[1])
-					.collect(toList());
+					.toList();
 			assertEquals("Hibernate in Action", isbnDesc.get(0));
 			assertEquals("Java Persistence with Hibernate", isbnDesc.get(1));
 		});
 	}
 
 	@Test void testAscendingDescendingCaseInsensitive(SessionFactoryScope scope) {
-		scope.inTransaction( session -> session.createMutationQuery("delete Book").executeUpdate() );
-		scope.inTransaction( session -> {
-			session.persist(new Book("9781932394153", "Hibernate in Action"));
-			session.persist(new Book("9781617290459", "Java Persistence with Hibernate"));
-		});
 		EntityDomainType<Book> bookType = scope.getSessionFactory().getJpaMetamodel().findEntityType(Book.class);
 		SingularAttribute<? super Book, ?> title = bookType.findSingularAttribute("title");
 		SingularAttribute<? super Book, ?> isbn = bookType.findSingularAttribute("isbn");
 		scope.inSession(session -> {
-			List<String> titlesAsc = session.createSelectionQuery("from Book", Book.class)
-					.setOrder(asc(title).ignoringCase())
+			List<String> titlesAsc = SelectionSpecification.create(Book.class, "from Book")
+					.sort(asc(title).ignoringCase())
+					.createQuery( session )
 					.getResultList()
 					.stream().map(book -> book.title)
-					.collect(toList());
+					.toList();
 			assertEquals("Hibernate in Action", titlesAsc.get(0));
 			assertEquals("Java Persistence with Hibernate", titlesAsc.get(1));
 
-			List<String> titlesDesc = session.createSelectionQuery("from Book", Book.class)
-					.setOrder(desc(title).ignoringCase())
+			List<String> titlesDesc = SelectionSpecification.create(Book.class, "from Book")
+					.sort(desc(title).ignoringCase())
+					.createQuery( session )
 					.getResultList()
 					.stream().map(book -> book.title)
-					.collect(toList());
+					.toList();
 			assertEquals("Hibernate in Action", titlesDesc.get(1));
 			assertEquals("Java Persistence with Hibernate", titlesDesc.get(0));
 
-			List<String> isbnAsc = session.createSelectionQuery("from Book", Book.class)
-					.setOrder(List.of(asc(isbn).ignoringCase(), desc(title).ignoringCase()))
+			List<String> isbnAsc = SelectionSpecification.create(Book.class, "from Book")
+					.sort(asc(isbn).ignoringCase())
+					.sort(desc(title).ignoringCase())
+					.createQuery( session )
 					.getResultList()
 					.stream().map(book -> book.title)
-					.collect(toList());
+					.toList();
 			assertEquals("Hibernate in Action", isbnAsc.get(1));
 			assertEquals("Java Persistence with Hibernate", isbnAsc.get(0));
 
-			List<String> isbnDesc = session.createSelectionQuery("from Book", Book.class)
-					.setOrder(List.of(desc(isbn).ignoringCase(), desc(title).ignoringCase()))
+			List<String> isbnDesc = SelectionSpecification.create(Book.class, "from Book")
+					.sort(desc(isbn).ignoringCase())
+					.sort(desc(title).ignoringCase())
+					.createQuery( session )
 					.getResultList()
 					.stream().map(book -> book.title)
-					.collect(toList());
+					.toList();
 			assertEquals("Hibernate in Action", isbnDesc.get(0));
 			assertEquals("Java Persistence with Hibernate", isbnDesc.get(1));
 
-//            titlesAsc = session.createSelectionQuery("from Book order by isbn asc", Book.class)
-//                    .setOrder(asc(title))
-//                    .getResultList()
-//                    .stream().map(book -> book.title)
-//                    .collect(toList());
-//            assertEquals("Hibernate in Action", titlesAsc.get(1));
-//            assertEquals("Java Persistence with Hibernate", titlesAsc.get(0));
-			titlesAsc = session.createSelectionQuery("from Book order by isbn asc", Book.class)
-//                    .setOrder(emptyList())
-					.setOrder(asc(title).ignoringCase())
+			titlesAsc = SelectionSpecification.create(Book.class, "from Book order by isbn asc")
+					.resort(asc(title).ignoringCase())
+					.createQuery( session )
 					.getResultList()
 					.stream().map(book -> book.title)
-					.collect(toList());
+					.toList();
 			assertEquals("Hibernate in Action", titlesAsc.get(0));
 			assertEquals("Java Persistence with Hibernate", titlesAsc.get(1));
 		});
 	}
 
 	@Test void testAscendingDescendingCaseInsensitiveLongForm(SessionFactoryScope scope) {
-		scope.inTransaction( session -> session.createMutationQuery("delete Book").executeUpdate() );
-		scope.inTransaction( session -> {
-			session.persist(new Book("9781932394153", "Hibernate in Action"));
-			session.persist(new Book("9781617290459", "Java Persistence with Hibernate"));
-		});
 		EntityDomainType<Book> bookType = scope.getSessionFactory().getJpaMetamodel().findEntityType(Book.class);
 		SingularAttribute<? super Book, ?> title = bookType.findSingularAttribute("title");
 		SingularAttribute<? super Book, ?> isbn = bookType.findSingularAttribute("isbn");
 		scope.inSession(session -> {
-			List<String> titlesAsc = session.createSelectionQuery("from Book", Book.class)
-					.setOrder(by(title, ASCENDING, true))
+			List<String> titlesAsc = SelectionSpecification.create(Book.class, "from Book")
+					.sort(by(title, ASCENDING, true))
+					.createQuery( session )
 					.getResultList()
 					.stream().map(book -> book.title)
-					.collect(toList());
+					.toList();
 			assertEquals("Hibernate in Action", titlesAsc.get(0));
 			assertEquals("Java Persistence with Hibernate", titlesAsc.get(1));
 
-			List<String> titlesDesc = session.createSelectionQuery("from Book", Book.class)
-					.setOrder(by(title, DESCENDING, true))
+			List<String> titlesDesc = SelectionSpecification.create(Book.class, "from Book")
+					.sort(by(title, DESCENDING, true))
+					.createQuery( session )
 					.getResultList()
 					.stream().map(book -> book.title)
-					.collect(toList());
+					.toList();
 			assertEquals("Hibernate in Action", titlesDesc.get(1));
 			assertEquals("Java Persistence with Hibernate", titlesDesc.get(0));
 
-			List<String> isbnAsc = session.createSelectionQuery("from Book", Book.class)
-					.setOrder(List.of(by(isbn, ASCENDING, true), by(title, DESCENDING, true)))
+			List<String> isbnAsc = SelectionSpecification.create(Book.class, "from Book")
+					.sort(by(isbn, ASCENDING, true))
+					.sort(by(title, DESCENDING, true))
+					.createQuery( session )
 					.getResultList()
 					.stream().map(book -> book.title)
-					.collect(toList());
+					.toList();
 			assertEquals("Hibernate in Action", isbnAsc.get(1));
 			assertEquals("Java Persistence with Hibernate", isbnAsc.get(0));
 
-			List<String> isbnDesc = session.createSelectionQuery("from Book", Book.class)
-					.setOrder(List.of(by(isbn, DESCENDING, true), by(title, DESCENDING, true)))
+			List<String> isbnDesc = SelectionSpecification.create(Book.class, "from Book")
+					.sort(by(isbn, DESCENDING, true))
+					.sort(by(title, DESCENDING, true))
+					.createQuery( session )
 					.getResultList()
 					.stream().map(book -> book.title)
-					.collect(toList());
+					.toList();
 			assertEquals("Hibernate in Action", isbnDesc.get(0));
 			assertEquals("Java Persistence with Hibernate", isbnDesc.get(1));
 
-//            titlesAsc = session.createSelectionQuery("from Book order by isbn asc", Book.class)
-//                    .setOrder(asc(title))
-//                    .getResultList()
-//                    .stream().map(book -> book.title)
-//                    .collect(toList());
-//            assertEquals("Hibernate in Action", titlesAsc.get(1));
-//            assertEquals("Java Persistence with Hibernate", titlesAsc.get(0));
-			titlesAsc = session.createSelectionQuery("from Book order by isbn asc", Book.class)
-//                    .setOrder(emptyList())
-					.setOrder(by(title, ASCENDING, true))
+			titlesAsc = SelectionSpecification.create(Book.class, "from Book order by isbn asc")
+					.resort(by(title, ASCENDING, true))
+					.createQuery( session )
 					.getResultList()
 					.stream().map(book -> book.title)
-					.collect(toList());
+					.toList();
 			assertEquals("Hibernate in Action", titlesAsc.get(0));
 			assertEquals("Java Persistence with Hibernate", titlesAsc.get(1));
 		});
 	}
 
+	@NotImplementedYet(reason = "Support for explicit select lists not implemented yet for SelectionSpecification")
 	@Test void testAscendingDescendingBySelectElementCaseInsensitive(SessionFactoryScope scope) {
-		scope.inTransaction( session -> session.createMutationQuery("delete Book").executeUpdate() );
-		scope.inTransaction( session -> {
-			session.persist(new Book("9781932394153", "Hibernate in Action"));
-			session.persist(new Book("9781617290459", "Java Persistence with Hibernate"));
-		});
 		scope.inSession(session -> {
-			List<?> titlesAsc = session.createSelectionQuery("select isbn, title from Book", Object[].class)
-					.setOrder(asc(2).ignoringCase())
+			List<?> titlesAsc = SelectionSpecification.create(Object[].class, "select isbn, title from Book")
+					.sort(asc(2).ignoringCase())
+					.createQuery( session )
 					.getResultList()
 					.stream().map(book -> book[1])
-					.collect(toList());
+					.toList();
 			assertEquals("Hibernate in Action", titlesAsc.get(0));
 			assertEquals("Java Persistence with Hibernate", titlesAsc.get(1));
 
-			List<?> titlesDesc = session.createSelectionQuery("select isbn, title from Book", Object[].class)
-					.setOrder(desc(2).ignoringCase())
+			List<?> titlesDesc = SelectionSpecification.create(Object[].class, "select isbn, title from Book")
+					.sort(desc(2).ignoringCase())
+					.createQuery( session )
 					.getResultList()
 					.stream().map(book -> book[1])
-					.collect(toList());
+					.toList();
 			assertEquals("Hibernate in Action", titlesDesc.get(1));
 			assertEquals("Java Persistence with Hibernate", titlesDesc.get(0));
 
-			List<?> isbnAsc = session.createSelectionQuery("select isbn, title from Book", Object[].class)
-					.setOrder(List.of(asc(1).ignoringCase(), desc(2).ignoringCase()))
+			List<?> isbnAsc = SelectionSpecification.create(Object[].class, "select isbn, title from Book")
+					.sort(asc(1).ignoringCase())
+					.sort(desc(2).ignoringCase())
+					.createQuery( session )
 					.getResultList()
 					.stream().map(book -> book[1])
-					.collect(toList());
+					.toList();
 			assertEquals("Hibernate in Action", isbnAsc.get(1));
 			assertEquals("Java Persistence with Hibernate", isbnAsc.get(0));
 
-			List<?> isbnDesc = session.createSelectionQuery("select isbn, title from Book", Object[].class)
-					.setOrder(List.of(desc(1).ignoringCase(), desc(2).ignoringCase()))
+			List<?> isbnDesc = SelectionSpecification.create(Object[].class, "select isbn, title from Book")
+					.sort(desc(1).ignoringCase())
+					.sort(desc(2).ignoringCase())
+					.createQuery( session )
 					.getResultList()
 					.stream().map(book -> book[1])
-					.collect(toList());
+					.toList();
 			assertEquals("Hibernate in Action", isbnDesc.get(0));
 			assertEquals("Java Persistence with Hibernate", isbnDesc.get(1));
 		});
 	}
 
+	@NotImplementedYet(reason = "Support for explicit select lists not implemented yet for SelectionSpecification")
 	@Test void testAscendingDescendingBySelectElementCaseInsensitiveLongForm(SessionFactoryScope scope) {
-		scope.inTransaction( session -> session.createMutationQuery("delete Book").executeUpdate() );
-		scope.inTransaction( session -> {
-			session.persist(new Book("9781932394153", "Hibernate in Action"));
-			session.persist(new Book("9781617290459", "Java Persistence with Hibernate"));
-		});
 		scope.inSession(session -> {
-			List<?> titlesAsc = session.createSelectionQuery("select isbn, title from Book", Object[].class)
-					.setOrder(by(2, ASCENDING, true))
+			List<?> titlesAsc = SelectionSpecification.create(Object[].class, "select isbn, title from Book")
+					.sort(by(2, ASCENDING, true))
+					.createQuery( session )
 					.getResultList()
 					.stream().map(book -> book[1])
-					.collect(toList());
+					.toList();
 			assertEquals("Hibernate in Action", titlesAsc.get(0));
 			assertEquals("Java Persistence with Hibernate", titlesAsc.get(1));
 
-			List<?> titlesDesc = session.createSelectionQuery("select isbn, title from Book", Object[].class)
-					.setOrder(by(2, DESCENDING, true))
+			List<?> titlesDesc = SelectionSpecification.create(Object[].class, "select isbn, title from Book")
+					.sort(by(2, DESCENDING, true))
+					.createQuery( session )
 					.getResultList()
 					.stream().map(book -> book[1])
-					.collect(toList());
+					.toList();
 			assertEquals("Hibernate in Action", titlesDesc.get(1));
 			assertEquals("Java Persistence with Hibernate", titlesDesc.get(0));
 
-			List<?> isbnAsc = session.createSelectionQuery("select isbn, title from Book", Object[].class)
-					.setOrder(List.of(by(1, ASCENDING, true), by(2, DESCENDING, true)))
+			List<?> isbnAsc = SelectionSpecification.create(Object[].class, "select isbn, title from Book")
+					.sort(by(1, ASCENDING, true))
+					.sort(by(2, DESCENDING, true))
+					.createQuery( session )
 					.getResultList()
 					.stream().map(book -> book[1])
-					.collect(toList());
+					.toList();
 			assertEquals("Hibernate in Action", isbnAsc.get(1));
 			assertEquals("Java Persistence with Hibernate", isbnAsc.get(0));
 
-			List<?> isbnDesc = session.createSelectionQuery("select isbn, title from Book", Object[].class)
-					.setOrder(List.of(by(1, DESCENDING, true), by(2, DESCENDING, true)))
+			List<?> isbnDesc = SelectionSpecification.create(Object[].class, "select isbn, title from Book")
+					.sort(by(1, DESCENDING, true))
+					.sort(by(2, DESCENDING, true))
+					.createQuery( session )
 					.getResultList()
 					.stream().map(book -> book[1])
-					.collect(toList());
+					.toList();
 			assertEquals("Hibernate in Action", isbnDesc.get(0));
 			assertEquals("Java Persistence with Hibernate", isbnDesc.get(1));
 		});
